[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
description = "Solana Program Test Framework"
edition = "2018"
license = "Apache-2.0"
name = "solana-program-test"
repository = "https://github.com/solana-labs/solana"
version = "1.8.14"

[dependencies]
async-trait = "0.1.42"
base64 = "0.12.3"
bincode = "1.3.1"
chrono = "0.4.19"
chrono-humanize = "0.2.1"
log = "0.4.11"
mio = "0.7.6"
serde = "1.0.112"
serde_derive = "1.0.103"
solana-banks-client = { git = "https://github.com/solindex/banks-client.git", version = "=1.8.14" }
solana-banks-server = { git = "https://github.com/solindex/banks-server.git", version = "=1.8.14" }
solana-bpf-loader-program = { git = "https://github.com/solindex/programs/bpf-loader-program.git", version = "=1.8.14" }
solana-logger = { git = "https://github.com/solindex/logger.git", version = "=1.8.14" }
solana-runtime = { git = "https://github.com/solindex/runtime.git", version = "=1.8.14" }
solana-sdk = { git = "https://github.com/solindex/sdk.git", version = "=1.8.14" }
solana-vote-program = { git = "https://github.com/solindex/programs.git", version = "=1.8.14" }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
assert_matches = "1.3.0"
